# xet-go

./: .gitignore  LICENSE  Makefile  README.md  XORB.md  doc.go  example_xorb_test.go  go.mod  hf_xet.yml  xet.yml  xetgo.go  xetgo_test.go
.github/workflows/: ci.yml  update-libs.yml
hf_xet/: cgo_helpers.go  cgo_helpers.h  doc.go  hf_xet.go  hf_xet.h  hf_xet_test.go  link.go  result_helpers.go  types.go
xet/: cgo_helpers.go  cgo_helpers.h  chunk.go  const.go  doc.go  link.go  result_helpers.go  types.go  xet.go  xet.h
xet-sys/: Cargo.toml
xet-sys/src/: lib.rs
